SERVER-50577 Return actual donor shard version in getShardAndCollectionVersion